--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hai·ts·jʌŋ)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My research interest is in understanding high-dimensional audio data with effective and efficient representation for solving the audio related problems. My recent works include speech coding, codec-based generation, speech enhancement and audio disentanglement.
-        <!-- <p> <br>I'm looking for jobs. </br> -->
+        <p>I'm pursuing Ph.D. degree in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My research interest is in understanding high-dimensional audio data with effective and efficient representation for solving the audio related problems. My recent works include speech coding, speech generation, speech enhancement and audio disentanglement.
+        <p> <strong>I'm on the job market. Reach out if my expertise fits your positions :) </strong>
         <p> (Website last updated 07/2024)
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
